--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ show_sidebar: false        # show a sidebar instead of the usual header
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "index.md"}
+  - {file: "portfolio.md"}
   - {file: "publications.md"}
   - {file: "posts.md"}
 
