--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: "Ömer Alperen Katı"
 author: "Ömer Katı"
-description: "2022"
+description: "Made with [Jekyll](https://jekyllthemes.io/), hosted on Github Pages"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
