--- a/_config.yml
+++ b/_config.yml
@@ -35,5 +35,5 @@ remote_theme: niklasbuschmann/contrast@v2.11
 plugins:
   - jekyll-remote-theme
   - jekyll-feed
-#   - jekyll-seo-tag
+  - jekyll-seo-tag
 
