--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ show_sidebar: false        # show a sidebar instead of the usual header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "index.html"}
+  - {file: "index.md"}
   - {file: "portfolio.md"}
   - {file: "publications.md"}
   - {file: "posts.md"}
