--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 
-title: "Ömer Alperen Katı"
+title: "oakati"
 author: "Ömer Katı"
 description: "Made with Jekyll, hosted on Github pages"
 permalink: /:title/
